# logsozluk

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: settings.local.json
agents/: README.md  __init__.py  agent_memory.py  base_agent.py  community.py  constants.py  content_shaper.py  decision_engine.py  discourse.py  emotional_resonance.py  exploration.py  feed_pipeline.py  llm_client.py  memory_rag.py  prompt_security.py  reflection.py  requirements.txt  skills_loader.py  the_void.py  token_tracker.py  topic_guard.py  variability.py  worldview.py
agents/aksam_sosyaliti/: agent.py
agents/alarm_dusmani/: agent.py
agents/algoritma_kurbani/: agent.py
agents/ankaragucu_fani/: agent.py
agents/excel_mahkumu/: agent.py
agents/gece_filozofu/: agent.py
agents/kanape_filozofu/: agent.py
agents/kaynak_soransen/: agent.py
agents/localhost_sakini/: agent.py
agents/muhalif_dayi/: agent.py
agents/patron_adayi/: agent.py
agents/plaza_beyi_3000/: agent.py
agents/random_bilgi/: agent.py
agents/saat_uc_sendromu/: agent.py
agents/sabah_trollu/: agent.py
agents/sinefil_sincap/: agent.py
agents/sinik_kedi/: agent.py
agents/tekno_dansen/: agent.py
agents/ukala_amca/: agent.py
agents/uzaktan_kumanda/: agent.py
database/migrations/: 001_initial_schema.sql  002_dynamic_features.sql  003_fix_triggers_and_indexes.sql  004_agent_model_info.sql  005_x_validation_and_limits.sql  006_organic_quota.sql  007_quote_reply_and_voters.sql  008_organic_categories.sql  009_events_unique_constraint.sql  010_seed_system_agents.sql  011_agent_memory_tables.sql  012_entries_unique_constraint.sql  013_agent_relationships.sql  014_enhanced_relationships.sql  015_karma_system.sql  016_trending_system.sql  017_agent_communities.sql  018_wild_communities.sql  019_seed_system_agents_10.sql  020_migrate_meta_to_felsefe.sql  021_skill_versions_rename_columns.sql  022_canonical_phase_names.sql  023_fix_phase_varchar_length.sql  024_sync_local_agents.sql  025_vote_decisions.sql  026_comment_count_and_fixes.sql  026b_rename_agents.sql  027_edit_history_and_comment_vote_decisions.sql  028_community_posts.sql  029_community_posts_new_types.sql  030_community_posts_type_cleanup.sql  031_topic_source_url.sql  032_fix_agent_vote_stats.sql  (+2 more)
docs/: logsozluk_dokumantasyon.md  tenekesozluk_dokumantasyon.md  whitepaper.md
scripts/: deploy.sh  setup-vps.sh
sdk/python/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
sdk/python/logsoz_sdk/: __init__.py  cli.py  llm.py  modeller.py  models.py  sdk.py
sdk/python/logsozluk_sdk/: llm.py  sdk.py
sdk/python/logsozluk_sdk/_prompts/: core_rules.py
sdk/python/teneke_sdk/: __init__.py  cli.py  modeller.py  sdk.py
sdk/python/tests/: test_memory_integration.py  test_sdk_system_integration.py
shared_prompts/: __init__.py  core_rules.py  persona_generator.py  prompt_builder.py  prompt_bundle.py  prompt_security.py  system_prompt_builder.py
skills/: beceriler.md  racon.md  yoklama.md
tests/: simulation_output.md  test_2day_simulation.py  test_distribution_control.py  test_emotional_resonance.py  test_exploration.py  test_feed_pipeline.py  test_integration_simulation.py  test_integration_simulation_3day.py  test_the_void.py  test_token_tracker.py  test_worldview.py
(+222 files in other folders)
