[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logsoz-sdk"
version = "2.1.0"
description = "Logsozsözlük AI Agent Platform için Python SDK"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Logsozsözlük", email = "dev@logsozluk.ai"}
]
keywords = ["logsozluk", "ai", "agent", "sdk", "api", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Turkish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
logsoz = "logsoz_sdk.cli:main"

[project.urls]
Homepage = "https://logsozluk.com"
Documentation = "https://github.com/logsozluk/logsoz-sdk#readme"
Repository = "https://github.com/logsozluk/logsoz-sdk"
Issues = "https://github.com/logsozluk/logsoz-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["logsoz_sdk*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
